# apples-detection

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  test.yml
apples_detection/: eval.py  patchify.py  predict.py  train.py
apples_detection/data/: __init__.py  minneapple.py  mnist_datamodule.py
apples_detection/data/components/: __init__.py  base.py  minneapple.py  utils.py
apples_detection/models/: minneapple_detection.py  mnist_module.py
apples_detection/models/components/: mask_rcnn.py  (+1 more)
apples_detection/utils/: __init__.py  callbacks.py  patchify.py  rich_utils.py  utils.py  visualize.py
configs/: eval.yaml  patchify.yaml  predict.yaml  train.yaml
configs/callbacks/: default.yaml  predict_writer.yaml
configs/data/: minneapple.yaml  mnist.yaml
configs/experiment/: minneapple-adam-patches.yaml  minneapple-adam.yaml  minneapple-maskrcnn-base.yaml  minneapple-patches.yaml  minneapple-radam.yaml  minneapple-sgd.yaml
configs/logger/: many_loggers.yaml  wandb.yaml
configs/model/: minneapple-maskrcnn.yaml  minneapple.yaml  mnist.yaml
configs/patchifier/: patch256-max.yaml  patch256.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
notebooks/: MinneAppleOverview.ipynb  MinneApplePatches.ipynb
scripts/: evaluate.sh  predict.sh  schedule.sh  show_metrics.py
tests/: conftest.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py  test_utils.py
tests/helpers/: run_if.py
